--- a/index.html
+++ b/index.html
@@ -11,42 +11,42 @@
     <article class="product">
       <h2 class="title">Nike premium leather sneaker</h2>
       <!-- container class only needed for flexbox -->
-      <!-- <div class="container"> -->
-      <img
-        class="nikeshoe"
-        src="Nikesneaker.jpg"
-        alt="model wearing nike sneaker"
-      />
-      <div class="product-information">
-        <div class="product-pricing">
-          <p class="price">€99,99</p>
-          <p class="shipping">
-            Free shipping<br />
-            from €100
+      <div class="container">
+        <img
+          class="nikeshoe"
+          src="Nikesneaker.jpg"
+          alt="model wearing nike sneaker"
+        />
+        <div class="product-information">
+          <div class="product-pricing">
+            <p class="price">€99,99</p>
+            <p class="shipping">
+              Free shipping<br />
+              from €100
+            </p>
+          </div>
+          <p class="product-description">
+            A cool vintage nike sneaker, the nike blazer is a true style icon
+            for the daring individual
           </p>
+          <a
+            class="link"
+            href="https://www.nike.com/nl/t/blazer-mid-77-kinderschoenen-pLGz7q/DA4086-100"
+            target="_blank"
+            >More info &RightArrow;</a
+          >
         </div>
-        <p class="product-description">
-          A cool vintage nike sneaker, the nike blazer is a true style icon for
-          the daring individual
-        </p>
-        <a
-          class="link"
-          href="https://www.nike.com/nl/t/blazer-mid-77-kinderschoenen-pLGz7q/DA4086-100"
-          target="_blank"
-          >More info &RightArrow;</a
-        >
-      </div>
 
-      <div class="product-details">
-        <p class="details-title">Product details:</p>
-        <ul class="details-list">
-          <li>A classic</li>
-          <li>Premium quality leather</li>
-          <li>Reinforced outsole</li>
-          <li>Original Nike branding</li>
-        </ul>
+        <div class="product-details">
+          <p class="details-title">Product details:</p>
+          <ul class="details-list">
+            <li>A classic</li>
+            <li>Premium quality leather</li>
+            <li>Reinforced outsole</li>
+            <li>Original Nike branding</li>
+          </ul>
+        </div>
       </div>
-      <!-- </div> -->
 
       <button class="add-cart">Add product to cart</button>
     </article>
